fix h-scrollbar

--- a/src/App.sass
+++ b/src/App.sass
@@ -7,9 +7,6 @@ body,
 
 .App
   .container
-    width: 70em
-    max-width: 100vw
-    margin: 0 auto
     padding-bottom: 5em
   .app-header
     padding: $space-md
