--- a/src/arearange/area-range.sass
+++ b/src/arearange/area-range.sass
@@ -1,6 +1,8 @@
 @import "../variable"
 
-.projection-title
-    text-align: center
-    font-size: 1.5em
-    margin-bottom: $space-md
+.projections
+    overflow: hidden // TODO(ricl): ideally we don't need this. But without this a h-scrollbar is shown.
+    .projection-title
+        text-align: center
+        font-size: 1.5em
+        margin-bottom: $space-md
